# RustChessEngine

./: Cargo.toml  README.md  build_and_install.sh  debug_build.sh  lichess_bot_rust.py  test_engine.py
src/: bitboard.rs  board.rs  eval.rs  lib.rs  main.rs  movegen.rs  opening_book.rs  search.rs  uci.rs  zobrist.rs
