[package]
name = "chess_engine"
version = "5.0.0"
edition = "2021"

[lib]
name = "chess_engine"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "chess_uci"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
rand = "0.8"
rayon = "1.8"
parking_lot = "0.12"
lazy_static = "1.4"

[features]
default = ["python"]
python = ["pyo3"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1